src/test/deca/syntax/invalid/other_method2.deca
//Description
//    Autre chose qu'attribut ou methode dans une decl de class
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

class A{
readInt();
}
